2006-09-04  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* exmpp_factory.erl: Correction de la documentation.

2006-08-31  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	Release 0.4.6.

	* include/exmpp.hrl: Ajout du namespace utilisé pour les erreurs au
	niveau stream.

	* src/exmpp_factory.erl (stream_error): Nouvelle fonction pour générer
	les erreurs au niveau stream.

2006-08-29  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	Release 0.4.5.

	* configure.ac: Ajout de flags de compilation Erlang pour avoir un
	maximum de warnings.

	* src/xml.erl: Correction de la documenation pour que les fonctions
	obsolètes pointent vers `exmpp_xml'.
	(get_cdata, remove_cdata): Rajout de deux fonctions qui avaient été
	supprimées avec la séparation `exmpp_xml'/`xml'.

	* src/exmpp_xml.erl: Correction de la documentation.
	(replace_child): Nouvelle fonction pour remplacer le fils d'un élément
	XML.
	(xmlnselement_to_xmlelement, xmlnsattributes_to_xmlattributes2):
	Correction de plusieurs warnings.

	* ebin/exmpp.app.in: Mise à jour de la liste des modules ; il manquait
	`xml'.

2006-08-16  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	Release 0.4.4.

	* include/exmpp.hrl, src/exmpp_xml.erl (document_fragment_to_list):
	Support rudimentaire des Processing Instructions pour permettre à
	l'appelant de générer `<?xml version='1.0' ?>' par exemple.

	* include/exmpp.hrl: Ajout des namespaces pour les demandes de
	compression, de TLS et de SASL.

	* src/exmpp_factory.erl: Ajout de fonctions pour générer des stanzas
	de négociations de TLS et de la compression.

	* src/exmpp_xml.erl (xmlelement_to_xmlnselement,
	xmlelement_to_xmlnselement_and_ns_tables): Ajout de fonctions pour
	convertir les anciens tuples vers les nouveaux formats.
	(xmlnselement_to_xmlelement): Correction d'un bug où le cas d'un
	namespace sous forme de chaîne de caractères (au lieu d'atome) n'était
	pas géré.

	* src/exmpp.erl, src/iconv.erl, src/ejabberd_zlib.erl, src/tls.erl,